@@ -1,3 +1,4 @@
 #Properties file for org.eclipse.linuxtools.valgrind.memcheck
 Bundle-Vendor.0 = Eclipse Linux Tools
 Bundle-Name.0 = Memcheck Plug-in
+memcheckLaunchConfiguration.name.0 = Memory Checking [Valgrind]
